--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -27,6 +27,7 @@ add_subdirectory(http_client_test)
 add_subdirectory(http_server_api_tests)
 add_subdirectory(https_test)
 add_subdirectory(openapi_test)
+add_subdirectory(repe_buffer_test)
 add_subdirectory(repe_test)
 add_subdirectory(repe_to_jsonrpc_test)
 add_subdirectory(rest_test)
