--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -112,6 +112,7 @@ nav:
  - RPC:
    - REPE RPC: rpc/repe-rpc.md
    - REPE Buffer Handling: rpc/repe-buffer.md
+   - REPE Plugin Interface: rpc/repe-plugin.md
    - REPE to JSON-RPC: rpc/repe-jsonrpc-conversion.md
  - Interface Utilities:
    - JSON Include: json-include.md
