--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(http_router_test)
 add_subdirectory(http_client_test)
 add_subdirectory(http_server_api_tests)
 add_subdirectory(https_test)
+add_subdirectory(jsonrpc_registry_test)
 add_subdirectory(openapi_test)
 add_subdirectory(repe_buffer_test)
 add_subdirectory(repe_plugin_test)
