Add experimental C++20 module support for JSON
Add opt-in C++20 module wrappers for Glaze JSON functionality, providing
cleaner imports via `import glaze.json;` and potentially faster compile
times.

Changes:
- Add `include/glaze/module/glaze_json.cppm` module wrapper that exports
  the glz namespace with JSON-specific functionality
- Add `glaze_BUILD_MODULES` CMake option (OFF by default) to enable
  module builds, requiring CMake 3.28+ for FILE_SET CXX_MODULES support
- Create `glaze::json_module` target for downstream consumption
- Update `cmake/install-rules.cmake` to install module targets when enabled
- Add module tests in `tests/module_test/` using the ut test framework
- Document module usage in `docs/installation.md` including requirements,
  CMake configuration, and example usage

Module requirements:
- CMake 3.28+ with Ninja or Visual Studio generator
- Compiler with C++20 module support (Clang 16+, GCC 14+, MSVC 19.34+)

Usage:
  cmake -B build -G Ninja -Dglaze_BUILD_MODULES=ON

  // In source code:
  import glaze.json;
  auto json = glz::write_json(my_object);

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,37 @@ target_include_directories(
     INTERFACE "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
 )
 
+option(glaze_BUILD_MODULES "Build C++20 module targets (requires CMake 3.28+)" OFF)
+
+if(glaze_BUILD_MODULES)
+  if(CMAKE_VERSION VERSION_LESS "3.28")
+    message(FATAL_ERROR "glaze_BUILD_MODULES requires CMake 3.28 or later")
+  endif()
+
+  # JSON module target
+  add_library(glaze_json_module)
+  add_library(glaze::json_module ALIAS glaze_json_module)
+
+  target_sources(glaze_json_module
+    PUBLIC
+      FILE_SET CXX_MODULES
+        BASE_DIRS
+          "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+          "$<INSTALL_INTERFACE:include>"
+        FILES "${PROJECT_SOURCE_DIR}/include/glaze/module/glaze_json.cppm"
+  )
+
+  target_compile_features(glaze_json_module PUBLIC cxx_std_23)
+  target_include_directories(glaze_json_module
+    PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+  )
+  target_link_libraries(glaze_json_module PUBLIC glaze::glaze)
+
+  set_target_properties(glaze_json_module PROPERTIES
+    EXPORT_NAME json_module
+  )
+endif()
+
 if(NOT CMAKE_SKIP_INSTALL_RULES)
   include(cmake/install-rules.cmake)
 endif()
