Zero copy REPE handling for plugins and registry

--- a/tests/networking_tests/CMakeLists.txt
+++ b/tests/networking_tests/CMakeLists.txt
@@ -31,6 +31,7 @@ add_subdirectory(openapi_test)
 add_subdirectory(repe_buffer_test)
 add_subdirectory(repe_plugin_test)
 add_subdirectory(repe_test)
+add_subdirectory(registry_view_test)
 add_subdirectory(repe_to_jsonrpc_test)
 add_subdirectory(rest_test)
 add_subdirectory(websocket_test)
