--- a/.github/workflows/boost-asio.yml
+++ b/.github/workflows/boost-asio.yml
@@ -18,10 +18,12 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        os: [ubuntu-22.04]
+        platform_version: ["22.04"]
         compiler:
           - { name: clang, version: 17 }
           - { name: clang, version: 18 }
@@ -56,7 +58,7 @@ jobs:
         uses: MarkusJx/install-boost@v2
         with:
           boost_version: ${{ matrix.boost_version }}
-          platform_version: 24.04
+          platform_version: ${{ matrix.platform_version }}
 
       - name: Configure CMake
         run: |
