JSON Merge Patch

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -94,6 +94,7 @@ nav:
    - JSON Pointer Syntax: json-pointer-syntax.md
    - Struct JSON Pointer Operations: struct-json-pointer.md
    - JSON Patch (RFC 6902): json-patch.md
+   - JSON Merge Patch (RFC 7386): json-merge-patch.md
    - JMESPath: JMESPath.md
    - JSON Schema: json-schema.md
    - Field Validation: field-validation.md
