--- a/.github/workflows/big-endian.yml
+++ b/.github/workflows/big-endian.yml
@@ -79,7 +79,9 @@ jobs:
           -DCMAKE_TOOLCHAIN_FILE=toolchain-s390x.cmake \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_CXX_STANDARD=23 \
-          -Dglaze_BUILD_NETWORKING_TESTS=OFF
+          -Dglaze_BUILD_NETWORKING_TESTS=OFF \
+          -Dglaze_BUILD_PERFORMANCE_TESTS=OFF \
+          -Dglaze_ENABLE_FUZZING=OFF
 
     - name: Build
       run: cmake --build build -j$(nproc)
@@ -87,6 +89,4 @@ jobs:
     - name: Test
       env:
         QEMU_LD_PREFIX: /usr/s390x-linux-gnu
-      # Exclude performance tests - they are too slow under QEMU emulation
-      # and not meaningful for big-endian validation
-      run: ctest --test-dir build --output-on-failure -E 'int_parsing|json_performance|json_perf_strings|json_perf_objects|json_perf_numbers|json_perf_discord|json_perf_benchmark'
+      run: ctest --test-dir build --output-on-failure
