Big endian support (#2141)
* Big endian support

* Fixes

* more byteswap

* Update big-endian.yml

* cross compile for big endian

* skip networking for big endian CI

* More big endian support

* byteswap in comparitor

* Fix unicode for big endian and short circuit benchmark on failure

* Fix beve key warning and char_escape_table for big endian

* avoid GCC warning

* fix to_uint16_t for big endian

* Don't build what we don't run on big endian ci

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -121,7 +121,10 @@ add_subdirectory(eigen_test)
 add_subdirectory(example_json)
 add_subdirectory(exceptions_test)
 add_subdirectory(inplace_vector)
-add_subdirectory(int_parsing)
+option(glaze_BUILD_PERFORMANCE_TESTS "Build performance tests" ON)
+if(glaze_BUILD_PERFORMANCE_TESTS)
+    add_subdirectory(int_parsing)
+endif()
 add_subdirectory(jmespath)
 add_subdirectory(jsonrpc_test)
 add_subdirectory(key_transformers_test)
@@ -137,11 +140,16 @@ add_subdirectory(utility_formats)
 # JSON Tests
 add_subdirectory(chrono_test)
 add_subdirectory(json_conformance)
-add_subdirectory(json_performance)
+if(glaze_BUILD_PERFORMANCE_TESTS)
+    add_subdirectory(json_performance)
+endif()
 add_subdirectory(json_reflection_test)
 add_subdirectory(json_test)
 
-add_subdirectory(networking_tests)
+option(glaze_BUILD_NETWORKING_TESTS "Build networking tests (requires OpenSSL)" ON)
+if(glaze_BUILD_NETWORKING_TESTS)
+    add_subdirectory(networking_tests)
+endif()
 
 if(glaze_EETF_FORMAT)
     add_subdirectory(eetf_test)
