--- a/fuzzing/CMakeLists.txt
+++ b/fuzzing/CMakeLists.txt
@@ -41,6 +41,10 @@ macro(create_fuzztest testname)
 endmacro()
 
 create_fuzztest(binary_reflection)
+create_fuzztest(cbor_reflection)
+create_fuzztest(cbor_roundtrip_floating)
+create_fuzztest(cbor_roundtrip_int)
+create_fuzztest(cbor_roundtrip_string)
 create_fuzztest(csv_parsing)
 create_fuzztest(json_generic)
 create_fuzztest(json_jmespath)
