glz::generic_i64 and glz::generic_u64 (#2057)
* Support for int64_t with glz::generic_t

* generic_i64 and generic_u64

* Update generic.hpp

--- a/tests/json_test/CMakeLists.txt
+++ b/tests/json_test/CMakeLists.txt
@@ -38,6 +38,14 @@ target_link_libraries(json_t_test PRIVATE glz_test_common)
 
 add_test(NAME json_t_test COMMAND json_t_test)
 
+## glz::generic_i64 and glz::generic_u64 tests
+
+add_executable(generic_int_test generic_int_test.cpp)
+
+target_link_libraries(generic_int_test PRIVATE glz_test_common)
+
+add_test(NAME generic_int_test COMMAND generic_int_test)
+
 ## JSON Schema test
 
 add_executable(jsonschema_test jsonschema_test.cpp)
