--- a/fuzzing/CMakeLists.txt
+++ b/fuzzing/CMakeLists.txt
@@ -45,6 +45,10 @@ create_fuzztest(cbor_reflection)
 create_fuzztest(cbor_roundtrip_floating)
 create_fuzztest(cbor_roundtrip_int)
 create_fuzztest(cbor_roundtrip_string)
+create_fuzztest(msgpack_reflection)
+create_fuzztest(msgpack_roundtrip_floating)
+create_fuzztest(msgpack_roundtrip_int)
+create_fuzztest(msgpack_roundtrip_string)
 create_fuzztest(csv_parsing)
 create_fuzztest(json_generic)
 create_fuzztest(json_jmespath)
