Attempt GCC fix

--- a/tests/networking_tests/websocket_test/CMakeLists.txt
+++ b/tests/networking_tests/websocket_test/CMakeLists.txt
@@ -43,25 +43,37 @@ target_link_libraries(${PROJECT_NAME} PRIVATE glz_test_exceptions)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
 
-# WSS (WebSocket Secure) Test - requires OpenSSL
+# WSS (WebSocket Secure) Test - requires OpenSSL with headers
 find_package(OpenSSL QUIET)
 if(OpenSSL_FOUND)
-    project(wss_test)
+    # Verify OpenSSL headers are actually usable (not just libraries found)
+    include(CheckCXXSourceCompiles)
+    set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
+    check_cxx_source_compiles("
+        #include <openssl/ssl.h>
+        int main() { return 0; }
+    " OPENSSL_HEADERS_AVAILABLE)
 
-    add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
+    if(OPENSSL_HEADERS_AVAILABLE)
+        project(wss_test)
 
-    target_link_libraries(${PROJECT_NAME}
-        PRIVATE
-        glz_test_exceptions
-        OpenSSL::SSL
-        OpenSSL::Crypto
-    )
+        add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
 
-    target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_ENABLE_SSL)
+        target_link_libraries(${PROJECT_NAME}
+            PRIVATE
+            glz_test_exceptions
+            OpenSSL::SSL
+            OpenSSL::Crypto
+        )
 
-    add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+        target_compile_definitions(${PROJECT_NAME} PRIVATE GLZ_ENABLE_SSL)
 
-    message(STATUS "WSS test will be built with OpenSSL support")
+        add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
+
+        message(STATUS "WSS test will be built with OpenSSL support")
+    else()
+        message(STATUS "WSS test skipped - OpenSSL headers not usable")
+    endif()
 else()
     message(STATUS "WSS test skipped - OpenSSL not found")
 endif()
