Add glaze_DISABLE_ALWAYS_INLINE option for smaller binary and faster builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,12 @@ if(glaze_DISABLE_SIMD_WHEN_SUPPORTED)
   target_compile_definitions(glaze_glaze INTERFACE GLZ_DISABLE_SIMD)
 endif()
 
+option(glaze_DISABLE_ALWAYS_INLINE
+       "disable forced inlining to reduce binary size and compilation time" OFF)
+if(glaze_DISABLE_ALWAYS_INLINE)
+  target_compile_definitions(glaze_glaze INTERFACE GLZ_DISABLE_ALWAYS_INLINE)
+endif()
+
 option(glaze_BUILD_EXAMPLES "Build GLAZE examples" OFF)
 
 if(glaze_BUILD_EXAMPLES)
