Unified glz::error_ctx and Stream I/O Support (#2163)
* New result for count tracking to replace error_ctx

* fixes

* match main

* Update feature_test.hpp

* glz::error_ctx

* Use error_ctx again

* write streaming

* input streaming

* streaming documentation

* Straightforward ostream resize

* Helpful documentation and changed next_read to return error_ctx

* Fix tests

* Update json_stream.hpp

* Better documentation organization

* noexcept and more documentation

* Update README.md

* Update feature_test.hpp

* 512 min byte length for streaming buffers

* Update README.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,9 @@ nav:
    - Partial Read/Write:
      - Partial Read: partial-read.md
      - Partial Write: partial-write.md
+   - Reading: reading.md
+   - Writing: writing.md
+   - Streaming I/O: streaming.md
    - Max Float Precision: max-float-precision.md
    - Ranges: ranges.md
  - Networking:
