--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -138,6 +138,8 @@ add_subdirectory(threading_test)
 add_subdirectory(toml_test)
 add_subdirectory(utility_formats)
 add_subdirectory(msgpack_test)
+add_subdirectory(ostream_buffer_test)
+add_subdirectory(istream_buffer_test)
 
 # JSON Tests
 add_subdirectory(chrono_test)
