float_format fallback to snprintf

--- a/tests/json_test/CMakeLists.txt
+++ b/tests/json_test/CMakeLists.txt
@@ -141,3 +141,11 @@ add_executable(allocate_raw_pointers_test allocate_raw_pointers_test.cpp)
 target_link_libraries(allocate_raw_pointers_test PRIVATE glz_test_common)
 
 add_test(NAME allocate_raw_pointers_test COMMAND allocate_raw_pointers_test)
+
+## snprintf fallback test - tests float_format with forced snprintf fallback (for iOS < 16.3 compatibility)
+
+add_executable(snprintf_fallback_test snprintf_fallback_test.cpp)
+
+target_link_libraries(snprintf_fallback_test PRIVATE glz_test_common)
+
+add_test(NAME snprintf_fallback_test COMMAND snprintf_fallback_test)
